AWS Postgres testing, works 2.22

--- a/SQL/testing.ipynb
+++ b/SQL/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,19 @@
     "import psycopg2\n",
     "import sqlite3\n",
     "from sqlalchemy import create_engine, inspect, insert, update, select, Table, Column, Integer, String, MetaData\n",
-    "from config import username, pw, port, dbName, host"
+    "from awsconfig import username, pw, port, dbName, host"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AWS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,43 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# connection string\n",
-    "db_path = \"db.sqlite\"\n",
-    "conn_string = f\"sqlite:///{db_path}\"\n",
-    "\n",
-    "# Create an engine that can talk to the database\n",
-    "engine = create_engine(conn_string, echo = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['db']"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Get the name of the table. \n",
-    "inspector_gadget = inspect(engine)\n",
-    "inspector_gadget.get_table_names()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,27 +75,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['db']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "inspector_gadget.inspe()"
+    "# Get the name of the table. \n",
+    "inspector_gadget = inspect(engine)\n",
+    "inspector_gadget.get_table_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +156,7 @@
        "0   1  Chuck  Zebra Cakes"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,14 +190,10 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from aws_advanced_python_wrapper import AwsWrapperConnection\n",
-    "from psycopg2 import connect\n",
-    "from config import username, pw, port, dbName, host"
+    "## Local sqlite db"
    ]
   },
   {
@@ -233,11 +202,124 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "awsconn = AwsWrapperConnection.connect(\n",
-    "        connect,\n",
-    "        f\"host={host} dbname={dbName} user={username} password={pw} plugins=failover wrapper_dialect=pg\"\n",
+    "# connection string\n",
+    "db_path = \"db.sqlite\"\n",
+    "conn_string = f\"sqlite:///{db_path}\"\n",
+    "\n",
+    "# Create an engine that can talk to the database\n",
+    "engine = create_engine(conn_string, echo = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the name of the table. \n",
+    "inspector_gadget = inspect(engine)\n",
+    "inspector_gadget.get_table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md_obj = MetaData()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the table\n",
+    "table = Table(\n",
+    "    \"db\",\n",
+    "    md_obj,\n",
+    "    Column(\"id\", Integer, primary_key = True),\n",
+    "    Column(\"name\", String(30)),\n",
+    "    Column(\"food\", String(30))\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# construct the table object for queries\n",
+    "table = Table('db', md_obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table.create(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inspector_gadget.inspe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a row of data to be inserted into the table and send it\n",
+    "insr = insert(table).values(id = 1, name = \"Chuck\", food = \"Zebra Cakes\")\n",
+    "\n",
+    "with engine.connect() as conn:\n",
+    "    result = conn.execute(insr)\n",
+    "    conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get all columns in table and into a Dataframe\n",
+    "query = \"\"\"\n",
+    "        SELECT\n",
+    "            *\n",
+    "        FROM\n",
+    "            db\n",
+    "\"\"\"\n",
+    "\n",
+    "conn = engine.connect()\n",
+    "df = pd.read_sql(query, conn)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
